[workspace]
members = ["incrstruct_derive"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tommie Gannert"]
repository = "https://github.com/tommie/incrstruct"
license = "MIT"
readme = "README.md"

[package]
name = "incrstruct"
description = "Build self-referencing structs using two-phase initialization"
version= "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
incrstruct_derive = { version = "^0.1.2", path = "incrstruct_derive" }
